[tool.poetry]
name = "oceanoptics"
version = "0.1.0"
description = ""
authors = ["Rickvl04 <rickvl@kpnmail.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13,<3.14"
pyside6 = "^6.8.1"
pyqtgraph = "^0.13.7"
pyvisa-py = "^0.7.2"
pyserial = "^3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
