[tool.poetry]
name = "oceanoptics"
version = "0.1.0"
description = ""
authors = ["Rickvl04 <rickvl@kpnmail.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13,<3.14"
pyside6 = "^6.8.1"
pyqtgraph = "^0.13.7"
plotext = "^5.3.2"
pyusb = "^1.2.1"
libusb = "^1.0.27.post3"
matplotlib = "^3.9.3"
pygments = "^2.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
